--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Manga Magazines TOC Hub">
 <meta property="og:description" content="Archive of Manga Magazine TOCs and Author Comments">
-<meta property="og:image" content="head.jpg">
+<meta property="og:image" content="https://manganimy.github.io/head.jpg">
 <meta property="og:url" content="https://manganimy.github.io">
 <meta name="twitter:card" content="summary_large_image">	
  <style>
