--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -121,21 +121,17 @@ div.desc {
   <div class="gallery">
     <a href="19_27/">
       <img src="19_27/img/img_ss.jpg" alt="" width="600" height="400">
-    </a>
-    <div class="desc"><h2><a href="19_27/">Weekly Shonen Sunday #27 2019</a></h2></div>
+	    <div class="desc"><h2>Weekly Shonen Sunday #27 2019</h2></div></a>
   </div>
 </div>
-
 
 <div class="responsive">
   <div class="gallery">
     <a href="19_28/">
       <img src="19_28/img/img_ss.jpg" alt="" width="600" height="400">
-    </a>
-    <div class="desc"><h2><a href="19_28/">Weekly Shonen Sunday #28 2019</a></h2></div>
+	    <div class="desc"><h2>Weekly Shonen Sunday #28 2019</h2></div></a>
   </div>
 </div>
-
 
 <div class="clearfix"></div>
 	<p style="border-top: 1px solid red">  </p>
