--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -42,22 +42,22 @@
  h2 {
  font-size: 1em;
 }
-h2 a {
+div.gallery  a {
      text-decoration: none;
 }
-h2 a {
+div.gallery  a {
 	color: black;
 }
-h2 a:link {
+div.gallery  a:link {
 	color: black;
 }
-h2 a:visited {
+div.gallery  a:visited {
 	color: black;
 }
-h2 a:hover {
+div.gallery  a:hover {
 	color: red;
 }
-h2 a:active {
+div.gallery  a:active {
 	color: black;
 }
 h3 {
