--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -12,7 +12,7 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<title>Weekly Shonen Sunday TOC Hub</title>
+<title>Weekly Shonen Magazine TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Magazine TOC Hub">
 <meta property="og:description" content="Archive of Weekly Shonen Magazine Author Comments">
@@ -38,27 +38,27 @@
 } 
  h1 {
   font-size: 1.5em;
-  border-bottom: 3px solid blue;
+  border-bottom: 3px solid #00479d;
 }
  h2 {
  font-size: 1em;
 }
-h2 a {
+div.gallery a {
      text-decoration: none;
 }
-h2 a {
+div.gallery a {
 	color: black;
 }
-h2 a:link {
+div.gallery a:link {
 	color: black;
 }
-h2 a:visited {
+div.gallery a:visited {
 	color: black;
 }
-h2 a:hover {
-	color: blue;
+div.gallery a:hover {
+	color: #00479d;
 }
-h2 a:active {
+div.gallery a:active {
 	color: black;
 }
 div.gallery {
@@ -119,8 +119,7 @@ div.desc {
   <div class="gallery">
     <a href="19_28/">
       <img src="19_28/img/img_wm.jpg" alt="" width="600" height="400">
-    </a>
-    <div class="desc"><h2><a href="19_28/">Weekly Shonen Magazine #28 2019</a></h2></div>
+	    <div class="desc"><h2>Weekly Shonen Magazine #28 2019</h2></div></a>
   </div>
 </div>
 
