--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -62,11 +62,11 @@ div.gallery a:active {
 	color: black;
 }
 div.gallery {
-  border: 1px solid #ccc;
+  border: 1px solid #777;
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1px solid #00479d;
 }
 
 div.gallery img {
