--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -16,8 +16,12 @@
         href="img/fav.ico">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta name="description" content="Table of contents">
+<meta property="og:title" content="Weekly Shonen Magazine #28 2019">	
+<meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
+<meta property="og:image" content="https://manganimy.github.io/wsm/TOC/19_28/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/wsm/TOC/19_28">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
