--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@ h1 {
   max-width: 1080px;
   margin: auto;
 } 
+div.gallery  a {
+     text-decoration: none;
+}
+div.gallery  a {
+	color: black;
+}
+div.gallery  a:link {
+	color: black;
+}
+div.gallery  a:visited {
+	color: black;
+}
+div.gallery  a:hover {
+	color: white;
+}
+div.gallery  a:active {
+	color: black;
+}
 div.gallery {
   border: 1px solid #ccc;
 }
