--- a/TOC/19_29/index.html
+++ b/TOC/19_29/index.html
@@ -233,6 +233,18 @@
 			</div>
 		</div>
 		
+		<!-- Yuragi sou -->
+		<div class="comment_area">
+			<h2><a href="">Yuragi-sou no Yuuna-san <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Tadahiro Miura</p>
+					Mr. Tsukuda, Mr. Saeki, it was a very long serialization that inspired me to strenghten my work. Thank you so much.
+				</div>
+			</div>
+		</div>
+		
 		<!-- The Last Saiyuki -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100054">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
