--- a/TOC/19_29/index.html
+++ b/TOC/19_29/index.html
@@ -240,7 +240,7 @@
 				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tadahiro Miura</p>
-					Mr. Tsukuda, Mr. Saeki, it was a very long serialization that inspired me to strenghten my work. Thank you so much.
+					Mr. Tsukuda, Mr. Saeki, it was a very long serialization that inspired me to strengthen my work. Thank you so much.
 				</div>
 			</div>
 		</div>
