--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -134,7 +134,7 @@ div.desc {
 </div>
 
 <div class="clearfix"></div>
-	<div class="center"><img src="img/mascot.png" style="height:62px"></div>
+	<div><img src="img/mascot.png" style="margin:8px auto; height:62px"></div>
 	<p style="border-top: 1px solid red">  </p>
 <div class="center" style="text-align:center">
 	<h3>Translations: WSStalkback</h3> 
