--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -134,11 +134,11 @@ div.desc {
 </div>
 
 <div class="clearfix"></div>
-	<div><img src="img/mascot.png" style="margin:8px auto; height:62px"></div>
-	<p style="border-top: 1px solid red">  </p>
-<div class="center" style="text-align:center">
+	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
+	<p style="border-top: 1px solid red"> </p>
+<div class="center" style="text-align:center; line-height:0">
 	<h3>Translations: WSStalkback</h3> 
-	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png"></a></p>
+	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="border-right: 1px solid black; padding-right:3px;"></a><a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="border-left: 1px solid black; padding-left:3px;"></a></p>
 </div>	
 </div>
 
