--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -28,10 +28,14 @@
 
 <body>
 <div id="container">
-	<div class="header">
+		<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Magazine posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.jpg" alt="WSM issue 28"></div>
+		<div class="alternate">
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img_wm.jpg" alt="WSM issue 28"></div> <div class="overlay">
+    <div class="img_wj"><img src="img_wm1.jpg" style="display: block; width: 100%; height:auto ; "></div>
+  </div>
+</div>
 	
 	</div><!-- end .header -->	
 	
