--- a/wsm/TOC/19_29/index.html
+++ b/wsm/TOC/19_29/index.html
@@ -31,12 +31,12 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Magazine posting order &amp; comments from the author.</span></div>
-		<div class="alternate">
+	<div class="alternate">
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.jpg" alt="WSM issue 29"></div>
 			<div class="overlay">
-    <div class="img_wj"><img src="img/img_wm1.jpg" style="display: block; width: 100%; height:auto ; "></div>
-  </div>
-</div>
+    		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm1.jpg" style="display: block; width: 100%; height:auto ; "></div>
+			</div>
+	</div>
 	
 	</div><!-- end .header -->	
 	<div class="contents">
