--- a/wss/TOC/19_29/index.html
+++ b/wss/TOC/19_29/index.html
@@ -45,6 +45,64 @@
 	
 	<div class="contents">
 		
+<!-- Tonikaku Cawaii--><div class="comment_area"><h2><a href="#">Tonikaku Cawaii<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tonikaku.png" alt=""></div><div class="r_side"><p class="author">Kenjiro Hata</p>iPhone.</div></div></div>
+
+<!-- MAO--><div class="comment_area"><h2><a href="#">MAO<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/mao.png" alt=""></div><div class="r_side"><p class="author">Rumiko Takahashi</p>Reprints of "Ashita no Joe" artwork.</div></div></div>
+
+<!-- Ponkotsu-chan Kenshochuu--><div class="comment_area"><h2><a href="#">Ponkotsu-chan Kenshochuu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ponkotsu.png" alt=""></div><div class="r_side"><p class="author">Tsubasa Fukuchi</p>Pictures of cats.</div></div></div>
+
+<!-- Be Blues!--><div class="comment_area"><h2><a href="#">Be Blues!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/beblues.png" alt=""></div><div class="r_side"><p class="author">Motoyuki Tanaka</p>I'd say I display trophies in my place but it's more like I just sorta toss around them and leave them where they lay...</div></div></div>
+
+<!-- Maiko-san chi no Makanai-san--><div class="comment_area"><h2><a href="#">Maiko-san chi no Makanai-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maikosan.png" alt=""></div><div class="r_side"><p class="author">Aiko Koyama</p>Adachi (Mitsuru)'s autographed cigarettes.</div></div></div>
+
+<!-- Daiku no Hato--><div class="comment_area"><h2><a href="#">Daiku no Hato<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/dai9nohato.png" alt=""></div><div class="r_side"><p class="author">Michiteru Kusaba</p>Gifts I've received --like stuff I've had signed.</div></div></div>
+
+<!-- Fire Rabbit!!--><div class="comment_area"><h2><a href="#">Fire Rabbit!!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/firerabbit.png" alt=""></div><div class="r_side"><p class="author">Aya Hirakawa</p>The birthday presents I get from my family!</div></div></div>
+
+<!-- Yuko sae tatakaeba--><div class="comment_area"><h2><a href="#">Yuko sae tatakaeba<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yukosae.png" alt=""></div><div class="r_side"><p class="author">Sei Fukui</p>(It's less that I decorate with them and more like I just kind of have them in storage) ...but letters from the fans!</div></div></div>
+
+<!-- Detective Conan--><div class="comment_area"><h2><a href="#">Detective Conan<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/conan.png" alt=""></div><div class="r_side"><p class="author">Gosho Aoyama</p>A picture of Minami-chan signed by Adachi-sensei. (Lol)</div></div></div>
+
+<!-- Komi-san wa komyusho desu--><div class="comment_area"><h2><a href="#">Komi-san wa komyusho desu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/komisan.png" alt=""></div><div class="r_side"><p class="author">Tomohito Oda</p>Test prints of Komi-san's logo!</div></div></div>
+
+<!-- Shinigami Bocchan to Kuro Maid--><div class="comment_area"><h2><a href="#">Shinigami Bocchan to Kuro Maid<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kuromaid.png" alt=""></div><div class="r_side"><p class="author">Koharu Inoue</p>Volume six is out in stores. Please enjoy it.</div></div></div>
+
+<!-- Kimi wa 008--><div class="comment_area"><h2><a href="#">Kimi wa 008<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kimiha008.png" alt=""></div><div class="r_side"><p class="author">Syun Matsuena</p>A poster of "Lord of the Rings" I got ten years ago...but it doesn't hold any specific importance to me. ^^;;</div></div></div>
+
+<!-- Souboutei Kowasubeshi--><div class="comment_area"><h2><a href="#">Souboutei Kowasubeshi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/sobotei.png" alt=""></div><div class="r_side"><p class="author">Kazuhiro Fujita</p>You're talking to a maniac collector here. I have the Zat Rabbit Panda model. (Lol) (TN- This is a vehicle from Ultraman.)</div></div></div>
+
+<!-- Amano Megumi wa suki darake!--><div class="comment_area"><h2><a href="#">Amano Megumi wa suki darake!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/amano.png" alt=""></div><div class="r_side"><p class="author">Nekoguchi</p>I've got autographs from various creators.</div></div></div>
+
+<!-- Aozakura Bouei daigakkou Monogatari--><div class="comment_area"><h2><a href="#">Aozakura Bouei daigakkou Monogatari<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/aozakura.png" alt=""></div><div class="r_side"><p class="author">Hikaru Nikaido</p>A G pen pentip that Rumiko Takahashi gave me.</div></div></div>
+
+<!-- SWITCH--><div class="comment_area"><h2><a href="#">SWITCH<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/switch.png" alt=""></div><div class="r_side"><p class="author">Atsushi Namikiri</p>Empty PET bottles. (TN- these are easy to recycle bottles made from lower grade materials.)</div></div></div>
+
+<!-- Maoujo de Oyasumi--><div class="comment_area"><h2><a href="#">Maoujo de Oyasumi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maojo.png" alt=""></div><div class="r_side"><p class="author">Kagiji Kumanomata</p>I've got lots of jewelry because I love it, but if an alien saw my collection they'd wonder why I have so many rocks. </div></div></div>
+
+<!-- Chrono Magia: Infinity Gear--><div class="comment_area"><h2><a href="#">Chrono Magia: Infinity Gear<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/chronomugen.png" alt=""></div><div class="r_side"><p class="author">Homura Kawamoto</p>A signed illustration from Gosho Aoyama.</div></div></div>
+
+<!-- Zettai Karen Children--><div class="comment_area"><h2><a href="#">Zettai Karen Children<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/children.png" alt=""></div><div class="r_side"><p class="author">Takashi Shiina</p>Unopened plastic models that I've treasured for years, or at this point should I say have stockpiled?</div></div></div>
+
+<!-- Hoankan Evans no Uso ~Dead or Love~--><div class="comment_area"><h2><a href="#">Hoankan Evans no Uso ~Dead or Love~<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/hoankan.png" alt=""></div><div class="r_side"><p class="author">Mizuki Kuriyama</p>An unused KSM X KSG Cap hangs from my wall.</div></div></div>
+
+<!-- Birdmen--><div class="comment_area"><h2><a href="#">Birdmen<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/birdmen.png" alt=""></div><div class="r_side"><p class="author">Yellow Tanabe</p>I'm not sure if I treasure it or not, but a bust of Nike I bought when I first got serialized. </div></div></div>
+
+<!-- Sokyuu no Ariadne--><div class="comment_area"><h2><a href="#">Sokyuu no Ariadne<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ariadne.png" alt=""></div><div class="r_side"><p class="author">Nobuhiro Yagi</p>An actual Claymore. (TN- Pretty sure he means from his previous serialization "Claymore" and not a bomb, hah.)</div></div></div>
+
+<!-- Undine ha Kyou mo Koi wo suru ka?--><div class="comment_area"><h2><a href="#">Undine ha Kyou mo Koi wo suru ka?<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/undine.png" alt=""></div><div class="r_side"><p class="author">Shinya Misu</p>I've always had a stuffed Owl doll hanging around.</div></div></div>
+
+<!-- RYOKO --><div class="comment_area"><h2><a href="#">RYOKO <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ryoko.png" alt=""></div><div class="r_side"><p class="author">Kaito Mitsuhashi</p>Autographs from my masters, teachers and assistants. A mysterious lease.</div></div></div>
+
+<!-- Tantei Xeno to Nanatsu no Satsujin Misshitsu--><div class="comment_area"><h2><a href="#">Tantei Xeno to Nanatsu no Satsujin Misshitsu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tanteixeno.png" alt=""></div><div class="r_side"><p class="author">Kyouichi Nanatsuki</p>"Cyborg Warrior Vega" and "Jabberwock". </div></div></div>
+
+<!-- Gofun go no Sekai--><div class="comment_area"><h2><a href="#">Gofun go no Sekai<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/5fungo.png" alt=""></div><div class="r_side"><p class="author">Hiroshi Fukuda</p>An autographed picture that Aoyama-sensei drew for me!!</div></div></div>
+
+<!-- Anonatsu 1959--><div class="comment_area"><h2><a href="#">Anonatsu 1959<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/anonatsu.png" alt=""></div><div class="r_side"><p class="author">Ashibi Fukui</p>A picture of Bishamonten that my grandfather drew. (TN- Also known as Vaisravana, a guardian god of Buddhism.)</div></div></div>
+
+<!-- Youkai Giga--><div class="comment_area"><h2><a href="#">Youkai Giga<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yokaigiga.png" alt=""></div><div class="r_side"><p class="author">Satsuki Satou</p>Akina Nakamori's tears. (TN- Nakamori is a singer, and Satou is probably referencing one of her singles "I'm not made of tears" released in 1984. There's a whole long pun going on here that I really don't have to space to explain, heh...)</div></div></div>
+
+<!-- Tokaichi Hitoribocchi Nouen--><div class="comment_area"><h2><a href="#">Tokaichi Hitoribocchi Nouen<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tokatihitori.png" alt=""></div><div class="r_side"><p class="author">Yuuji Yokoyama</p>Reproduced artwork from "Touch" and "Buddha". (TN- The first is a series by Mitsuru Adachi, and the second is a series by Osamu Tezuka). </div></div></div>
+
 
 
 	</div><!-- end .contents -->
