--- a/wss/TOC/19_29/index.html
+++ b/wss/TOC/19_29/index.html
@@ -39,7 +39,8 @@
 			<em><b>Question of the week</b></em>
 		</div>
 		<div class="column weekly">
-           " " 
+
+"What's something you decorate your home or workplace with?"
         	</div>
 	</div>
 	
