--- a/wss/TOC/19_29/index.html
+++ b/wss/TOC/19_29/index.html
@@ -66,7 +66,7 @@
 
 <!-- Komi-san wa komyusho desu--><div class="comment_area"><h2><a href="#">Komi-san wa komyusho desu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/komisan.png" alt=""></div><div class="r_side"><p class="author">Tomohito Oda</p>Test prints of Komi-san's logo!</div></div></div>
 
-<!-- Shinigami Bocchan to Kuro Maid--><div class="comment_area"><h2><a href="#">Shinigami Bocchan to Kuro Maid<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kuromaid.png" alt=""></div><div class="r_side"><p class="author">Koharu Inoue</p>Volume six is out in stores. Please enjoy it.</div></div></div>
+<!-- Shinigami Bocchan to Kuro Maid--><div class="comment_area"><h2><a href="#">Shinigami Bocchan to Kuro Maid(Special Chapter)<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kuromaid.png" alt=""></div><div class="r_side"><p class="author">Koharu Inoue</p>Volume six is out in stores. Please enjoy it.</div></div></div>
 
 <!-- Kimi wa 008--><div class="comment_area"><h2><a href="#">Kimi wa 008<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kimiha008.png" alt=""></div><div class="r_side"><p class="author">Syun Matsuena</p>A poster of "Lord of the Rings" I got ten years ago...but it doesn't hold any specific importance to me. ^^;;</div></div></div>
 
