--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -122,7 +122,13 @@ div.desc {
 	    <div class="desc"><h2>Weekly Shonen Magazine #28 2019</h2></div></a>
   </div>
 </div>
-
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_29/">
+      <img src="19_29/img/img_wm.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Magazine #29 2019</h2></div></a>
+  </div>
+</div>
 
 <div class="clearfix"></div>
 	
