--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -12,12 +12,12 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<title>Weekly Shonen Magazine TOC Hub</title>
+<title>Tsugi ni kuru (Next-Gen) Manga Awards 2019</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Magazine TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Magazine Author Comments">
-<meta property="og:image" content="https://manganimy.github.io/wsm/TOC/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/wsm/TOC/">
+<meta property="og:title" content="Tsugi ni kuru (Next-Gen) Manga Awards 2019">
+<meta property="og:description" content="Tsugi ni kuru (Next-Gen) Manga Awards 2019 Nominees">
+<meta property="og:image" content="https://manganimy.github.io/sp/tsugimanga2019/img/top.png">
+<meta property="og:url" content="https://manganimy.github.io/sp/tsugimanga2019/">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
@@ -118,14 +118,14 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="19_28/">
-      <img src="19_28/img/img_wm.jpg" alt="" width="600" height="400">
+      <img src="comic_01.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Magazine #28 2019</h2></div></a>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
     <a href="19_29/">
-      <img src="19_29/img/img_wm.jpg" alt="" width="600" height="400">
+      <img src="comic_02.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Magazine #29 2019</h2></div></a>
   </div>
 </div>
