--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -112,21 +112,21 @@ div.desc {
 <body>
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
-<h1>Weekly Shonen Magazine Table of Contents &amp; Author Comments</h1>
+<h1>Tsugi ni kuru (Next-Gen) Manga Awards 2019 Nominees</h1>
 
 
 <div class="responsive">
   <div class="gallery">
     <a href="19_28/">
-      <img src="comic_01.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Magazine #28 2019</h2></div></a>
+      <img src="comics_01.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Aka no Grimoire</h2></div></a>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
     <a href="19_29/">
-      <img src="comic_02.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Magazine #29 2019</h2></div></a>
+      <img src="comics_02.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div></a>
   </div>
 </div>
 
