--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -21,8 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
-  background-color: #ffdddd;
-  background-image: linear-gradient(#ffdddd, #f6626b);	 
+  background-color: #91e4ff; 
   color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
@@ -111,7 +110,7 @@ div.desc {
 </head>
 <body>
 <div class="content">
-<img src="img/logo.png" style="width:70%" class="center">
+<img src="img/logo.png" style="width:55%" class="center">
 <h1>Tsugi ni kuru (Next-Gen) Manga Awards 2019 Nominees</h1>
 
 
