--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -117,14 +117,14 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="19_28/">
-      <img src="comics_01.jpg" alt="" width="600" height="400">
+      <img src="img/comics_01.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Aka no Grimoire</h2></div></a>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
     <a href="19_29/">
-      <img src="comics_02.jpg" alt="" width="600" height="400">
+      <img src="img/comics_02.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div></a>
   </div>
 </div>
