--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -31,47 +31,75 @@
   margin-right: auto;
   width: 50%;
   }
-
-
+ .content {
+  max-width: 1080px;
+  margin: auto;
+} 
  h1 {
   font-size: 1.5em;
   border-bottom: 3px solid #00479d;
 }
+ h2 {
+ font-size: 1em;
+}
+a {
+     text-decoration: none;
+}
+div.gallery a {
+	color: black;
+}
+div.gallery a:link {
+	color: black;
+}
+div.gallery a:visited {
+	color: black;
+}
+div.gallery a:hover {
+	color: #00479d;
+}
+div.gallery a:active {
+	color: black;
+}
+div.gallery {
 
-
-.nominees{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap; list-style-type: none; padding:0 10%; }
-
-
-.list_item{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;padding:1%;border:1px solid #111}@media(min-width:769px){.list_item{width:20%}}@media(max-width:768px){.list_item{width:40%;padding:1%;}}
-
-.list_visual{
-width:100%;
-
-text-align:center;
+  border: 1px solid #777;
 }
 
-@media(min-width:769px){
-.list_visual{
-max-height:170px;
-min-height:170px;
-}}
-
-@media(max-width:768px){
-.list_visual{
-min-height:127px;
-}}
-
-.list_visual img{
-width:auto;
-max-width:100%;
-max-height:170px;
+div.gallery div{
+	text-align: center;
+  	width:100%;
+    height:auto
 }
 
-@media(max-width:768px){
-.list_visual img{
-max-height:127px;
-}}
-.nominate-list__item__title{margin-bottom:10px;font-size:1.8rem;font-weight:700;line-height:1.5}@media(min-width:769px){.nominate-list__item__title{min-height:54px}}@media(max-width:768px){.nominate-list__item__title{font-size:1.6rem}}.nominate-list__item__author{margin-bottom:5px;font-size:1.4rem}@media(max-width:768px){.nominate-list__item__author{font-size:1.2rem}}@media(max-width:768px){.nominate-list__item__author span{display:block}}@media(min-width:769px){.nominate-list__item__author span:not(:last-of-type){margin-right:10px}}
+div.desc {
+	overflow:hidden;
+    text-overflow: ellipsis;
+  padding: 10px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 5px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 5px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 49.99999%;;
+  }
+}
 
 .clearfix:after {
   content: "";
@@ -86,25 +114,27 @@ max-height:127px;
 <h1>Tsugi ni kuru (Next-Gen) Manga Awards 2019 Nominees</h1>
 
 
-<ul class="nominees">
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_01.jpg"></div><div class="nominate-list__item__title">Aka no Grimoire</div><div class="nominate-list__item__author"><span>Ａ－１０</span></div></li>
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_02.jpg"></div><div class="nominate-list__item__title">Ano Hito no i Ni Wa Boku Ga Tarinai</div><div class="nominate-list__item__author"><span>チョモラン</span></div></li>
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_03.jpg"></div><div class="nominate-list__item__title">Aka no Grimoire</div><div class="nominate-list__item__author"><span>Ａ－１０</span></div></li>
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_04.jpg"></div><div class="nominate-list__item__title">Ano Hito no i Ni Wa Boku Ga Tarinai</div><div class="nominate-list__item__author"><span>チョモラン</span></div></li>
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_05.jpg"></div><div class="nominate-list__item__title">Ano Hito no i Ni Wa Boku Ga Tarinai</div><div class="nominate-list__item__author"><span>チョモラン</span></div></li>
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_06.jpg"></div><div class="nominate-list__item__title">Aka no Grimoire</div><div class="nominate-list__item__author"><span>Ａ－１０</span></div></li>
-<li class="list_item"><div class="list_visual"><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_07.jpg"></div><div class="nominate-list__item__title">Ano Hito no i Ni Wa Boku Ga Tarinai</div><div class="nominate-list__item__author"><span>チョモラン</span></div></li>
-
-
-</ul>
+<div class="responsive">
+  <div class="gallery">
+      <div><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_01.jpg" alt="" width="320" height="460" style="object-fit: contain;  width:auto; max-width:100%; height:300px;"></div>
+	    <div class="desc"  style="height:100px;"><h2>Aka no Grimoire</h2></div>
+  </div>
 </div>
+
+<div class="responsive">
+  <div class="gallery">
+       <div><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_02.jpg" alt="" width="320" height="460" style="object-fit: contain;  width:auto; max-width:100%; height:300px;"></div>
+	    <div class="desc" style="height:100px;"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div>
+  </div>
+</div>
+
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
 	<p><b>Source: WSJ Discord</b><p>
-	<p><b>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></b></p>
+	<p><b>TL: Google &amp; <a href="https://twitter.com/RaafGL">@RaafGL</a></b></p>
 	<p><b>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></b></p>
 
 </div>	
-
+</div>
 </body>
