--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -61,16 +61,22 @@ div.gallery a:active {
 	color: black;
 }
 div.gallery {
-
+	margin: 5px 0;
   border: 1px solid #777;
 }
 
-div.gallery div{
+div.gallery div.box{
 	text-align: center;
   	width:100%;
-    height:auto
-}
+    height:auto;
 
+}
+div.gallery div.box img{
+object-fit: contain;
+width:auto;
+max-width:100%;
+max-height:170px;"
+}
 div.desc {
 	overflow:hidden;
     text-overflow: ellipsis;
@@ -85,15 +91,9 @@ div.desc {
 .responsive {
   padding: 0 5px;
   float: left;
-  width: 24.99999%;
+  width: 19.99999%;
 }
 
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 5px 0;
-  }
-}
 
 @media only screen and (max-width: 500px) {
   .responsive {
@@ -110,20 +110,26 @@ div.desc {
 </head>
 <body>
 <div class="content">
-<img src="https://manganimy.github.io/sp/tsugimanga2019/img/logo.png" style="width:55%" class="center">
+<img src="img/logo.png" style="width:55%" class="center">
 <h1>Tsugi ni kuru (Next-Gen) Manga Awards 2019 Nominees</h1>
 
 
 <div class="responsive">
   <div class="gallery">
-      <div><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_01.jpg" alt="" width="320" height="460" style="object-fit: contain;  width:auto; max-width:100%; height:300px;"></div>
+      <div class="box"><img src="img/comics_01.jpg" alt="" width="320" height="460" ></div>
 	    <div class="desc"  style="height:100px;"><h2>Aka no Grimoire</h2></div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-       <div><img src="https://manganimy.github.io/sp/tsugimanga2019/img/comics_02.jpg" alt="" width="320" height="460" style="object-fit: contain;  width:auto; max-width:100%; height:300px;"></div>
+       <div class="box"><img src="img/comics_02.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc" style="height:100px;"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+       <div class="box"><img src="img/comics_03.jpg" alt="" width="320" height="460" ></div>
 	    <div class="desc" style="height:100px;"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div>
   </div>
 </div>
@@ -131,9 +137,8 @@ div.desc {
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
-	<p><b>Source: WSJ Discord</b><p>
-	<p><b>TL: Google &amp; <a href="https://twitter.com/RaafGL">@RaafGL</a></b></p>
-	<p><b>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></b></p>
+	<p><a href="https://tsugimanga.jp/"><b>Source: WSJ Discord</b></a><p>
+	
 
 </div>	
 </div>
