--- a/sp/tsugimanga2019/index.html
+++ b/sp/tsugimanga2019/index.html
@@ -117,23 +117,303 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
       <div class="box"><img src="img/comics_01.jpg" alt="" width="320" height="460" ></div>
-	    <div class="desc"  style="height:100px;"><h2>Aka no Grimoire</h2></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
        <div class="box"><img src="img/comics_02.jpg" alt="" width="320" height="460" ></div>
-	    <div class="desc" style="height:100px;"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div>
+	    <div class="desc" style="height:100px;">Ano Hito no i Ni Wa Boku Ga Tarinai -Chomoran</div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
        <div class="box"><img src="img/comics_03.jpg" alt="" width="320" height="460" ></div>
-	    <div class="desc" style="height:100px;"><h2>Ano Hito no i Ni Wa Boku Ga Tarinai</h2></div>
+	    <div class="desc" style="height:100px;">Unsung Cinderella Hospital Pharmacist Aoi Midori -arai mamare</div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+       <div class="box"><img src="img/comics_04.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc" style="height:100px;">Ikoku Nikki - Tomoko Yamashita</div>
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+       <div class="box"><img src="img/comics_05.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc" style="height:100px;">Otome Monster Caramelize - Spica Aoki </div>
+  </div>
+</div>	
+	
+	<div class="responsive">
+  <div class="gallery">
+       <div class="box"><img src="img/comics_06.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc" style="height:100px;">[Bakarina]Otome Game no Hametsu Flag shika nai Akuyaku Reijou ni Tensei shite shimatta...   </div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_07.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_08.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_09.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_10.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_11.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_12.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_13.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_14.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_15.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_16.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_17.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_18.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_19.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_20.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_21.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_22.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_23.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_24.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_25.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_26.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_27.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_28.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_29.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div><div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_30.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div><div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_31.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_32.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_33.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_34.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_35.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_36.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_37.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_38.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_39.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_40.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_41.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_42.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div><div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_43.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_44.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_45.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_46.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_47.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_48.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_49.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
+	<div class="responsive">
+  <div class="gallery">
+      <div class="box"><img src="img/comics_50.jpg" alt="" width="320" height="460" ></div>
+	    <div class="desc"  style="height:100px;">Aka no Grimoire A- 10</div>
+  </div>
+</div>
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
