--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -12,12 +12,12 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<title>Weekly Shonen Sunday TOC Hub</title>
+<title>Weekly Shonen Champion TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Sunday TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Sunday Author Comments">
-<meta property="og:image" content="https://manganimy.github.io/wss/TOC/img/top.png">
-<meta property="og:url" content="https://manganimy.github.io/wss/TOC/">
+<meta property="og:title" content="Weekly Shonen Champion TOC Hub">
+<meta property="og:description" content="Archive of Weekly Shonen Champion Author Comments">
+<meta property="og:image" content="https://manganimy.github.io/wsc/TOC/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/wsc/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
@@ -114,36 +114,17 @@ div.desc {
 <body>
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
-<h1>Weekly Shonen Sunday Table of Contents &amp; Author Comments</h1>
+<h1>Weekly Shonen Champion Table of Contents &amp; Author Comments</h1>
 
-  
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_27/">
-      <img src="19_27/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #27 2019</h2></div></a>
-  </div>
-</div>
 
 <div class="responsive">
   <div class="gallery">
     <a href="19_28/">
-      <img src="19_28/img/img_ss.jpg" alt="" width="600" height="400">
+      <img src="19_28/img/img_wc.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Sunday #28 2019</h2></div></a>
   </div>
 </div>
-<div class="responsive">
 
-  <div class="gallery">
-
-    <a href="19_29/">
-
-      <img src="19_29/img/img_ss.jpg" alt="" width="600" height="400">
-
-	    <div class="desc"><h2>Weekly Shonen Sunday #29 2019</h2></div></a>  
-	</div>
-
-</div>
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid red"> </p>
