--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
-  background: #f5f5dc;
+  background: #fff0fc;
   color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
@@ -37,7 +37,7 @@
 } 
  h1 {
   font-size: 1.5em;
-  border-bottom: 3px solid red;
+  border-bottom: 3px solid #9c46ff;
 }
  h2 {
  font-size: 1em;
@@ -55,7 +55,7 @@ div.gallery  a:visited {
 	color: black;
 }
 div.gallery  a:hover {
-	color: red;
+	color: #9c46ff;
 }
 div.gallery  a:active {
 	color: black;
