--- a/index.html
+++ b/index.html
@@ -131,7 +131,14 @@ div.desc {
   </div>
 </div>
 
-
+<div class="responsive">
+  <div class="gallery">
+    <a href="wsc/TOC">
+      <img src="wsc/TOC/img/logo.png" alt="">
+    <div class="desc"><h2>WSC TOC hub</h2></div>
+	</a>
+  </div>
+</div>
 <div class="clearfix"></div>
     </div>
 </body>
