--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="wsc/TOC">
-      <img src="wsc/TOC/img/logo.png" alt="">
+      <img src="wsc/TOC/img/logo2.png" alt="">
     <div class="desc"><h2>WSC TOC hub</h2></div>
 	</a>
   </div>
