--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -129,8 +129,8 @@ div.desc {
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid red"> </p>
 <div class="center" style="text-align:center; line-height:0">
-	<h3>Translations: WSStalkback</h3> 
-	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="border-right: 1px solid black; padding-right:3px;"></a><a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="border-left: 1px solid black; padding-left:3px;"></a></p>
+	<h3>Source: Manga Magazines Group</h3> 
+
 </div>	
 </div>
 
