--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -73,7 +73,7 @@
 		<div class="cooyactxt" style="font-weight: 300">TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></div>
 		<div class="cooyactxt" style="font-weight: 300">Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></div>
 		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>
-		<div class="cooyactxt">&copy; KODANSHA Inc. All rights reserved.</div>
+		<div class="cooyactxt">&copy; KODANSHA Ltd. All rights reserved.</div>
 	
 	</div><!-- end .footer -->
 </div><!-- end .container -->
