--- a/wsc/TOC/19_28/index.html
+++ b/wsc/TOC/19_28/index.html
@@ -62,9 +62,9 @@
 
 	</div><!-- end .contents -->
 	<div id="footer">
+		<div class="cooyactxt" style="font-weight: 300">TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></div>
 		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>
-		<div class="cooyactxt">Translation: WSStalkback <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></div>
-		<div class="cooyactxt">&copy; SHOGAKUKAN Inc. All rights reserved.</div>
+		<div class="cooyactxt">&copy; AKITA SHOTEN Co., Ltd. All rights reserved.</div>
 	
 	</div><!-- end .footer -->
 </div><!-- end .container -->
